@@ -23,6 +23,7 @@ import com.graphhopper.coll.GHBitSetImpl;
 import com.graphhopper.config.CHProfile;
 import com.graphhopper.config.LMProfile;
 import com.graphhopper.config.Profile;
+import com.graphhopper.routing.TestProfiles;
 import com.graphhopper.routing.ev.EncodedValue;
 import com.graphhopper.routing.lm.LandmarkStorage;
 import com.graphhopper.routing.util.EdgeFilter;
@@ -74,7 +75,7 @@ public class GraphHopperOSMTest {
         String profile = "car_profile";
         GraphHopper hopper = new GraphHopper().
                 setStoreOnFlush(true).
-                setProfiles(Profile.createTestProfile(profile)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile(testOsm);
         hopper.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
@@ -88,7 +89,7 @@ public class GraphHopperOSMTest {
 
         // no encoding manager necessary
         hopper = new GraphHopper().
-                setProfiles(Profile.createTestProfile(profile)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setStoreOnFlush(true);
         hopper.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
         hopper.setGraphHopperLocation(ghLoc);
@@ -119,7 +120,7 @@ public class GraphHopperOSMTest {
     public void testLoadOSMNoCH() {
         final String profile = "profile";
         GraphHopper gh = new GraphHopper().
-                setProfiles(Profile.createTestProfile(profile)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setStoreOnFlush(true).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile(testOsm);
@@ -134,7 +135,7 @@ public class GraphHopperOSMTest {
 
         gh.close();
         gh = new GraphHopper().
-                setProfiles(Profile.createTestProfile(profile)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setStoreOnFlush(true).
                 setGraphHopperLocation(ghLoc);
         assertTrue(gh.load());
@@ -146,7 +147,7 @@ public class GraphHopperOSMTest {
         gh.close();
 
         gh = new GraphHopper().
-                setProfiles(Profile.createTestProfile(profile)).
+                setProfiles(TestProfiles.constantSpeed(profile)).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile(testOsm);
 
@@ -157,7 +158,7 @@ public class GraphHopperOSMTest {
     @Test
     public void testQueryLocationIndexWithBBox() {
         final GraphHopper gh = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile("../core/files/monaco.osm.gz");
@@ -211,7 +212,7 @@ public class GraphHopperOSMTest {
     public void testLoadingWithDifferentCHConfig_issue471_pr1488() {
         // when there is a single CH profile we can also load GraphHopper without it
         // in #471 this was forbidden, but later it was allowed again, see #1488
-        Profile profile = Profile.createTestProfile("car");
+        Profile profile = TestProfiles.constantSpeed("car");
 
         GraphHopper gh = new GraphHopper().
                 setStoreOnFlush(true).
@@ -262,21 +263,21 @@ public class GraphHopperOSMTest {
     @Test
     public void testAllowMultipleReadingInstances() {
         GraphHopper instance1 = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile(testOsm);
         instance1.importOrLoad();
 
         GraphHopper instance2 = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true).
                 setOSMFile(testOsm).
                 setGraphHopperLocation(ghLoc);
         instance2.load();
 
         GraphHopper instance3 = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true).
                 setOSMFile(testOsm).
                 setGraphHopperLocation(ghLoc);
@@ -304,7 +305,7 @@ public class GraphHopperOSMTest {
             }
         }.setStoreOnFlush(true).
                 setGraphHopperLocation(ghLoc).
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setOSMFile(testOsm);
         final AtomicReference<Exception> ar = new AtomicReference<>();
         Thread thread = new Thread() {
@@ -320,7 +321,7 @@ public class GraphHopperOSMTest {
         thread.start();
 
         GraphHopper instance2 = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true).
                 setOSMFile(testOsm).
                 setGraphHopperLocation(ghLoc);
@@ -351,7 +352,7 @@ public class GraphHopperOSMTest {
 
         instance = new GraphHopper().
                 setStoreOnFlush(false).
-                setProfiles(Profile.createTestProfile("profile")).
+                setProfiles(TestProfiles.constantSpeed("profile")).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile(testOsm);
         instance.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
@@ -372,8 +373,8 @@ public class GraphHopperOSMTest {
         // now all ways are imported
         instance = new GraphHopper().
                 setProfiles(
-                        new Profile(profile1).setCustomModel(Helper.createBaseModel("car")),
-                        new Profile(profile2).setCustomModel(Helper.createBaseModel("foot"))
+                        TestProfiles.accessAndSpeed(profile1, "car"),
+                        TestProfiles.accessAndSpeed(profile2, "foot")
                 ).
                 setStoreOnFlush(false).
                 setGraphHopperLocation(ghLoc).
@@ -430,45 +431,45 @@ public class GraphHopperOSMTest {
                                 putObject("datareader.file", testOsm3).
                                 putObject("datareader.dataaccess", "RAM").
                                 putObject("import.osm.ignored_highways", "").
-                                setProfiles(Arrays.asList(
-                                        new Profile("foot").setCustomModel(Helper.createBaseModel("foot")),
-                                        new Profile("car").setCustomModel(Helper.createBaseModel("car"))
+                                setProfiles(List.of(
+                                        TestProfiles.constantSpeed("foot"),
+                                        TestProfiles.constantSpeed("car")
                                 ))).
                 setGraphHopperLocation(ghLoc);
         instance.importOrLoad();
         assertEquals(5, instance.getBaseGraph().getNodes());
         instance.close();
 
-        // different flagEncoder list has no effect when loading, so it does not matter, but the profiles must be the same
+        // the profiles must be the same
         GraphHopper tmpGH = new GraphHopper().init(
                         new GraphHopperConfig().
                                 putObject("datareader.file", testOsm3).
                                 putObject("datareader.dataaccess", "RAM").
                                 putObject("import.osm.ignored_highways", "").
-                                setProfiles(Collections.singletonList(
-                                        new Profile("foot").setCustomModel(Helper.createBaseModel("foot"))
+                                setProfiles(List.of(
+                                        TestProfiles.constantSpeed("foot")
                                 ))).
                 setOSMFile(testOsm3).
                 setGraphHopperLocation(ghLoc);
         IllegalStateException e = assertThrows(IllegalStateException.class, tmpGH::load);
         assertTrue(e.getMessage().contains("Profiles do not match"), e.getMessage());
 
-        // different encoded values do not matter either
+        // different encoded values do not matter, since they are ignored when loading the graph anyway
         instance = new GraphHopper().init(
                         new GraphHopperConfig().
                                 putObject("datareader.file", testOsm3).
                                 putObject("datareader.dataaccess", "RAM").
                                 putObject("graph.encoded_values", "road_class").
                                 putObject("import.osm.ignored_highways", "").
-                                setProfiles(Arrays.asList(
-                                        new Profile("foot").setCustomModel(Helper.createBaseModel("foot")),
-                                        new Profile("car").setCustomModel(Helper.createBaseModel("car"))
+                                setProfiles(List.of(
+                                        TestProfiles.constantSpeed("foot"),
+                                        TestProfiles.constantSpeed("car")
                                 ))).
                 setOSMFile(testOsm3).
                 setGraphHopperLocation(ghLoc);
         instance.load();
         assertEquals(5, instance.getBaseGraph().getNodes());
-        assertEquals("foot_access,foot_priority,foot_average_speed,car_access,car_average_speed,road_class,road_environment,roundabout,road_class_link,max_speed,foot_network,ferry_speed,foot_subnetwork,car_subnetwork",
+        assertEquals("foot_access,car_access,road_class,road_environment,roundabout,road_class_link,max_speed,foot_network,ferry_speed,foot_subnetwork,car_subnetwork",
                 instance.getEncodingManager().getEncodedValues().stream().map(EncodedValue::getName).collect(Collectors.joining(",")));
     }
 
@@ -479,7 +480,7 @@ public class GraphHopperOSMTest {
                                 putObject("datareader.file", testOsm3).
                                 putObject("datareader.dataaccess", "RAM").
                                 putObject("import.osm.ignored_highways", "").
-                                setProfiles(List.of(Profile.createTestProfile("car")))).
+                                setProfiles(List.of(TestProfiles.constantSpeed("car")))).
                 setGraphHopperLocation(ghLoc);
         instance.importOrLoad();
         // older versions <= 0.12 did not store this property, ensure that we fail to load it
@@ -496,7 +497,7 @@ public class GraphHopperOSMTest {
                                 putObject("graph.location", ghLoc).
                                 putObject("graph.encoded_values", "road_environment,road_class").
                                 putObject("import.osm.ignored_highways", "").
-                                setProfiles(List.of(Profile.createTestProfile("car")))).
+                                setProfiles(List.of(TestProfiles.constantSpeed("car")))).
                 setOSMFile(testOsm3);
         instance.load();
         assertEquals(5, instance.getBaseGraph().getNodes());
@@ -545,7 +546,7 @@ public class GraphHopperOSMTest {
 
         // missing OSM file to import
         instance = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(true).
                 setGraphHopperLocation(ghLoc);
         ex = assertThrows(IllegalStateException.class, instance::importOrLoad);
@@ -562,7 +563,7 @@ public class GraphHopperOSMTest {
 
         // Import is possible even if no storeOnFlush is specified BUT here we miss the OSM file
         instance = new GraphHopper().
-                setProfiles(Profile.createTestProfile("car")).
+                setProfiles(TestProfiles.constantSpeed("car")).
                 setStoreOnFlush(false).
                 setGraphHopperLocation(ghLoc);
         ex = assertThrows(IllegalStateException.class, instance::importOrLoad);
@@ -576,11 +577,11 @@ public class GraphHopperOSMTest {
         final String profile = "foot_profile";
         instance = new GraphHopper().
                 setStoreOnFlush(false).
-                setProfiles(new Profile(profile).setCustomModel(Helper.createBaseModel("foot"))).
+                setProfiles(TestProfiles.accessAndSpeed("foot", "foot")).
                 setGraphHopperLocation(ghLoc).
                 setOSMFile(testOsm3);
         // exclude motorways which aren't accessible for foot
-        instance.getReaderConfig().setIgnoredHighways(Arrays.asList("motorway"));
+        instance.getReaderConfig().setIgnoredHighways(List.of("motorway"));
         instance.getCHPreparationHandler().setCHProfiles(new CHProfile(profile));
         instance.importOrLoad();
 
@@ -606,7 +607,7 @@ public class GraphHopperOSMTest {
                         putObject("datareader.file", testOsm3).
                         putObject("prepare.min_network_size", 0).
                         putObject("import.osm.ignored_highways", "").
-                        setProfiles(List.of(Profile.createTestProfile(profile))).
+                        setProfiles(List.of(TestProfiles.constantSpeed(profile))).
                         setCHProfiles(Collections.singletonList(new CHProfile(profile)))
                 ).
                 setGraphHopperLocation(ghLoc);
@@ -640,10 +641,10 @@ public class GraphHopperOSMTest {
             GraphHopper hopper = new GraphHopper().
                     setStoreOnFlush(false).
                     setProfiles(
-                            Profile.createTestProfile("p1"),
-                            Profile.createTestProfile("p2"),
-                            Profile.createTestProfile("p3"),
-                            Profile.createTestProfile("p4")
+                            TestProfiles.constantSpeed("p1"),
+                            TestProfiles.constantSpeed("p2"),
+                            TestProfiles.constantSpeed("p3"),
+                            TestProfiles.constantSpeed("p4")
                     ).
                     setGraphHopperLocation(ghLoc).
                     setOSMFile(testOsm);
@@ -687,10 +688,10 @@ public class GraphHopperOSMTest {
             GraphHopper hopper = new GraphHopper().
                     setStoreOnFlush(false).
                     setProfiles(Arrays.asList(
-                            Profile.createTestProfile("p1"),
-                            Profile.createTestProfile("p2"),
-                            Profile.createTestProfile("p3"),
-                            Profile.createTestProfile("p4")
+                            TestProfiles.constantSpeed("p1"),
+                            TestProfiles.constantSpeed("p2"),
+                            TestProfiles.constantSpeed("p3"),
+                            TestProfiles.constantSpeed("p4")
                     )).
                     setGraphHopperLocation(ghLoc).
                     setOSMFile(testOsm);
@@ -787,7 +788,7 @@ public class GraphHopperOSMTest {
             // problem: we remove a profile, which would technically be possible, but does not save memory either. it
             //          could be useful to disable a profile, but currently we just force a new import.
             GraphHopper hopper = createHopperWithProfiles(List.of(
-                    Profile.createTestProfile("car")
+                    TestProfiles.constantSpeed("car")
             ));
             IllegalStateException e = assertThrows(IllegalStateException.class, hopper::importOrLoad);
             assertTrue(e.getMessage().contains("Profiles do not match"), e.getMessage());
@@ -808,7 +809,7 @@ public class GraphHopperOSMTest {
 
     @Test
     public void testLoadingLMAndCHProfiles() {
-        Profile profile = Profile.createTestProfile("car");
+        Profile profile = TestProfiles.constantSpeed("car");
         GraphHopper hopper = new GraphHopper()
                 .setGraphHopperLocation(ghLoc)
                 .setOSMFile(testOsm)
